fix alignment

--- a/randomstuffimade/fake_terminal/public/terminal.css
+++ b/randomstuffimade/fake_terminal/public/terminal.css
@@ -6,12 +6,14 @@ body {
 }
 
 #terminal {
-  max-width: 800px;
+  max-width: 2800px;
   margin: auto;
 }
 
 #output {
   white-space: pre-wrap;
+  font-family: monospace;
+  font-size: 15px;
 }
 
 input {
@@ -19,7 +21,7 @@ input {
   border: none;
   color: #00ff00;
   font-family: monospace;
-  font-size: 1em;
+  font-size: 15px;
   outline: none;
   width: 90%;
 }
